# goit-pythonweb-hw-03

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  error.html  index.html  main.py  message.html  pyproject.toml
templates/: read.html
